--- a/main.ipynb
+++ b/main.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "Na grafu je videti, da se je po svetovnih vojnah popularnost klavirske glasba zmanjšala. Menim pa, da je verjetnejša razlaga to, da nam preprosto manjka \"zgodovinski pogled\" na to obdobje - ljudje še nismo imeli časa, da bi prepoznali pomembnejše skladatelje (na naši spletni strani je namreč navedenih zelo malo modernih skladateljev).\n",
     "\n",
-    "Morda je zaradi prej omenjenega kratkega a številnega opusa baročnih skladateljev pravičnejša presoja o popularnosti klavirja možna s pomočjo grafa skupnega trajanja skladb skozi čas."
+    "Morda je zaradi prej omenjenega kratkega a številnega opusa baročnih skladateljev pravičnejša presoja o popularnosti klavirske glasbe možna s pomočjo grafa skupnega trajanja skladb skozi čas."
    ]
   },
   {
@@ -194,11 +194,9 @@
    "id": "24088c6c",
    "metadata": {},
    "source": [
-    "Kot vidimo, se trajanje del rahlo daljša skozi čas - raste približno 1,5 sekund na leto. Pri delih del je ta rast dosti manj opazna.\n",
+    "Kot vidimo, se trajanje del rahlo daljša skozi čas - raste približno 1,5 sekund na leto. Pri delih del je ta rast dosti manj opazna. Iz tega lahko sklepamo, da se popularnost večdelnih kompozicij veča.\n",
     "\n",
-    "Še ena zanimivost je, da je najdaljša skladba v našem katalogu nastala že v času baroka: gre za Bachove \"Goldbergove variacije\". Kljub temu da je sestavljena iz arie in tridesetih variacij se načeloma šteje za neprekinjeno skladbo, ki v modernih izvedbah še vedno traja okoli eno uro.\n",
-    "\n",
-    "Zanimivo bi si bilo ogledati še drug ekstrem: dela, sestavljena iz mnogih skladb. Oglejmo si torej pet najbolj razdrobljenih del."
+    "Še ena zanimivost je, da je najdaljša skladba v našem katalogu nastala že v času baroka: gre za Bachove \"Goldbergove variacije\". Kljub temu da je sestavljena iz arie in tridesetih variacij se načeloma šteje za neprekinjeno skladbo, ki v modernih izvedbah traja okoli eno uro. Zanimivo bi si bilo ogledati še drug ekstrem: dela, sestavljena iz mnogih skladb. Oglejmo si torej pet najbolj razdrobljenih del."
    ]
   },
   {
@@ -443,7 +441,7 @@
    "id": "a14b79a4",
    "metadata": {},
    "source": [
-    "Kar tri dela na seznamu (Bachovi zbirki z naslovoma Dobro uglašeni klavir in Šostakovičeva zbirka) so kolekcije preludijev in fug v vseh tonalitetah, kar skupaj znese vsaj $2\\times24=48$ del. Zraven sta se znašli še Mozartova zbirka kompozicijskih vaj iz otroštva in pa Schumannov Album za otroke, ki ga je posvetil svojim trem hčeram.\n",
+    "Kar tri dela na seznamu (Šostakovičevo delo in pa Bachovi zbirki Dobro uglašeni klavir) so kolekcije preludijev in fug v vseh tonalitetah, kar skupaj znese vsaj $2\\times24=48$ skladb. Zraven sta se znašli še Mozartova zbirka kompozicijskih vaj iz otroštva in pa Schumannov Album za otroke, ki ga je posvetil svojim trem hčeram.\n",
     "\n",
     "Nadaljujmo z analizo trajanja. Oglejmo si še graf povprečnega trajanja skladb skozi leta in skupno porazdelitev trajanja skladb."
    ]
@@ -732,7 +730,9 @@
    "id": "b42972ef",
    "metadata": {},
    "source": [
-    "Med drugim opzimo prej omenjeno prevlado preprostih durov v klasicizmu (obdobju med približno 1750 do 1800). Vidimo tudi, da so v modernih časih (od 1900 dalje) tonalitete dosti bolj enakomerno uporabljene. Za konec si dovolimo še eno očem prijaznejšo predstavo zgodovinske bitke dura in mola."
+    "Med drugim opazimo prej omenjeno prevlado preprostih durov v klasicizmu (obdobju med približno 1750 do 1800). Vidimo tudi, da so v modernih časih (od 1900 dalje) tonalitete dosti bolj enakomerno uporabljene.\n",
+    "\n",
+    "Za konec si dovolimo še eno očem prijaznejšo predstavo zgodovinske bitke dura in mola."
    ]
   },
   {
@@ -915,7 +915,7 @@
    "source": [
     "Zares gre za precej enakomerno razporeditev. Opazimo pa lahko tri izjeme, skladatelje, ki so pisali dosti daljše skladbe od ostalih. Messiaen in Saariaho sta modernejša, kar delno upraviči njuno posebnost, Liszt pa takega izgovora nima. Nikdar ni izdal večjih zbirk krajših skladb, zato je večina njegovega opusa pač sestavljena iz daljših.\n",
     "\n",
-    "A ta skladatelj je znan še po nečem drugem. V času svojega življenja je zaslovel kot legendaren pianist, ki je s kombinacijo svoje tehnične dovršenosti in kreativnosti za vedno spremenil klavirsko glasbo. Poglejmo si še ostale skladatelje, ki jim je bolj mar za razvoj glasbe kot za udobje pianistov."
+    "A ta skladatelj je znan še po nečem drugem. V času svojega življenja je zaslovel kot legendaren pianist, ki je s kombinacijo svoje tehnične dovršenosti in kreativnosti za vedno spremenil klavirsko glasbo. Poglejmo si še ostale skladatelje, ki jim je bolj mar za razvoj izraznih zmožnosti klavirja kot za udobje pianistov."
    ]
   },
   {
@@ -1108,13 +1108,13 @@
    "id": "8a15a2e0",
    "metadata": {},
    "source": [
-    "Seveda smo tu odstranili skladatelje, ki imajo premalo relevantnih podatkov. Kljub temu pa me je Scriabinov rezultat sprva presenetil, saj me njegova dela ponavadi navdajo ali z globokim psihološkim strahom ali pa z ekstazo, zelo redko pa se mi zdijo \"poskočna\". Resničen razlog za njegovo zmago je to, da je večina njegovih del polna zelo gostih tekstur in hitrega menjavanja tem.\n",
+    "Seveda smo tu odstranili skladatelje, ki imajo premalo relevantnih podatkov. Zato pa me je Scriabinov rezultat sprva toliko bolj presenetil, saj me njegova dela ponavadi navdajo ali z globokim psihološkim strahom ali pa z ekstazo, zelo redko se mi zdijo \"poskočna\". Resničen razlog za njegovo zmago je to, da je večina njegovih del polna zelo gostih tekstur in hitrega menjavanja tem.\n",
     "\n",
     "## Zaključek\n",
     "\n",
-    "Kljub temu da se z glasbo ukvarjam že dolgo in mi je veliko ugotovljenega bilo že znano, me je vseeno presenetilo, kako jasno so podatki ta dejstva prikazali. Najboljši primer tega je graf odvisnosti modusa od petdesetletja, kjer smo kljub pomanjkljivostim v podatkih o tonaliteti pridobili sliko, ki se je ujemala s tistim, kar sem izvedel v šolah. Vseeno pa sem izvedel tudi veliko novega: o Scarlattijevem ogromnem opusu prej nisem vedel skoraj ničesar, presenetilo me je, kako malo se je običajno trajanje skladb spreminjalo skozi čas, nisem si predstavljal, koliko pogostejši so duri od molov, ...\n",
+    "Kljub temu da se z glasbo ukvarjam že dolgo in mi je veliko, kar smo ugotovili, že znano, me je vseeno presenetilo, kako jasno so podatki ta dejstva prikazali. Najboljši primer tega je graf odvisnosti modusa od petdesetletja, kjer smo kljub pomanjkljivostim v podatkih o tonaliteti pridobili sliko, ki se je ujemala s tistim, kar sem izvedel v šolah. Vseeno pa sem izvedel tudi veliko novega: o Scarlattijevem ogromnem opusu prej nisem vedel skoraj ničesar, presenetilo me je, kako malo se je običajno trajanje skladb spreminjalo skozi čas, nisem si predstavljal, da so duri res toliko pogostejši od molov, ...\n",
     "\n",
-    "Iz podatkov smo iztisnili skoraj vse kar se iz podatkov iztisniti da. Za naprednejšo analizo skladb bi bilo potrebno imeti na razpolago notni zapis del, da bi lahko za prav vsako določili tonaliteto in tempo, pa tudi zapletenejše podatke, kot so harmonije in motivi. A to bi bilo mnogo bolj zapleteno, zato to nalogo prepuščam bralcu."
+    "Iz podatkov smo iztisnili skoraj vse, kar se iz podatkov iztisniti da. Za naprednejšo analizo skladb bi bilo potrebno imeti na razpolago npr. notni zapis del, da bi lahko za prav vsako določili tonaliteto in tempo, morda pa tudi katere zapletenejše podatke, kot so harmonije in motivi. To nalogo prepuščam bralcu."
    ]
   }
  ],
